k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestapi
  labels:
    app.kubernetes.io/name: orchestapi
    app.kubernetes.io/component: application
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: orchestapi
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
