k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orchestapi
  labels:
    app.kubernetes.io/name: orchestapi
    app.kubernetes.io/component: application
spec:
  rules:
    - host: orchestapi.invalid
      http:
        paths:
          - path: /orchestapi
            pathType: Prefix
            backend:
              service:
                name: orchestapi
                port:
                  number: 8080
